--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/knex": "^0.16.1",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "joi": "^17.9.1",
