--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ GOOGLE_AUTH_PROVIDER_X509_CERT_URL=
 
 JWT_SECRET=JWT_SECRET
 JWT_SECRET_EXPIRES_IN=24h
+
+HTTP_BASIC_USER=wirebill
+HTTP_BASIC_PASS=wirebill
