--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prepare": "husky install",
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "precommit": "lint-staged",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -24,6 +26,9 @@
     "db:seed": "cross-env NODE_ENV=development ./node_modules/.bin/knex seed:run",
     "db:migrate": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
     "knex:init": "./node_modules/.bin/knex init -x ts"
+  },
+  "lint-staged": {
+    "**/*.{ts,json}": []
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -40,8 +45,10 @@
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "husky": "^8.0.3",
     "joi": "^17.9.1",
     "knex": "^2.4.2",
+    "lint-staged": "^13.2.0",
     "nestjs-knex": "^2.0.0",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
@@ -79,7 +86,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -87,7 +94,14 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@wirebill/shared(|/.*)$": "<rootDir>/libs/shared/src/$1"
+    }
   }
 }
