--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/knex": "^0.16.1",
+    "@types/uuid": "^9.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -56,7 +57,8 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
