--- a/package.json
+++ b/package.json
@@ -104,5 +104,9 @@
     "moduleNameMapper": {
       "^@wirebill/shared(|/.*)$": "<rootDir>/libs/shared/src/$1"
     }
+  },
+  "engines": {
+    "node": ">=16.16",
+    "npm": ">=8.11"
   }
 }
