--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "google-auth-library": "^8.7.0",
     "husky": "^8.0.3",
     "joi": "^17.9.1",
     "knex": "^2.4.2",
