--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,6 @@ POSTGRES_PASSWORD=password
 POSTGRES_DIALECT=postgres
 POSTGRES_LOGGING=false
 
-# http://some-url?key=GOOGLE_API_KEY
 GOOGLE_API_KEY=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -23,3 +22,9 @@ JWT_REFRESH_TOKEN_EXPIRES_IN=168h
 
 HTTP_BASIC_USER=wirebill
 HTTP_BASIC_PASS=wirebill
+ 
+NODEMAILER_SMTP_HOST=
+NODEMAILER_SMTP_PORT=
+NODEMAILER_SMTP_USER=
+NODEMAILER_SMTP_USER_PASS=
+NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
