--- a/package.json
+++ b/package.json
@@ -31,15 +31,13 @@
     "**/*.{ts,json}": []
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
-    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
-    "@types/knex": "^0.16.1",
-    "@types/uuid": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
@@ -50,9 +48,7 @@
     "knex": "^2.4.2",
     "lint-staged": "^13.2.0",
     "nestjs-knex": "^2.0.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-http": "^0.3.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -60,6 +56,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/knex": "^0.16.1",
+    "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^9.0.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
