--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:make-migration": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:make",
     "db:rollback": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:rollback",
+    "db:migrate:list": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:list",
     "db:seed": "cross-env NODE_ENV=development ./node_modules/.bin/knex seed:run",
     "db:migrate": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
     "knex:init": "./node_modules/.bin/knex init -x ts"
@@ -56,16 +57,16 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/knex": "^0.16.1",
-    "@types/nodemailer": "^6.4.7",
-    "@types/uuid": "^9.0.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/knex": "^0.16.1",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
