--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
+    "@types/cron": "^2.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
