--- a/package.json
+++ b/package.json
@@ -36,11 +36,15 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.2",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
     "@types/cron": "^2.0.1",
+    "@types/lodash": "^4.14.192",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
@@ -50,8 +54,11 @@
     "joi": "^17.9.1",
     "knex": "^2.4.2",
     "lint-staged": "^13.2.0",
+    "lodash": "^4.17.21",
     "nestjs-knex": "^2.0.0",
     "nodemailer": "^6.9.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
