configurin stripe, add stripe webhook

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ NODEMAILER_SMTP_PORT=
 NODEMAILER_SMTP_USER=
 NODEMAILER_SMTP_USER_PASS=
 NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
+
+STRIPE_PUBLISHABLE_KEY=STRIPE_PUBLISHABLE_KEY
+STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
