--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/lodash": "^4.14.192",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/stripe": "^8.0.417",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
@@ -56,6 +57,7 @@
     "lint-staged": "^13.2.0",
     "lodash": "^4.17.21",
     "nestjs-knex": "^2.0.0",
+    "nestjs-stripe": "^1.0.0",
     "nodemailer": "^6.9.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -63,6 +65,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stripe": "^12.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
