--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,8 @@
     "**/*coverage*": true,
     "**/*node_modules": true,
     "**/*package-lock.json*": true,
-    "**/*yarn.lock*": true
+    "**/*yarn.lock*": true,
+    "**/*yalc.lock*": true
   },
   "javascript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false
