--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@nestjs/swagger": "^6.2.1",
     "@types/cron": "^2.0.1",
     "@types/lodash": "^4.14.192",
+    "@types/passport": "^1.0.12",
+    "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/stripe": "^8.0.417",
@@ -59,6 +61,7 @@
     "nestjs-knex": "^2.0.0",
     "nestjs-stripe": "^1.0.0",
     "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
