--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
+    "@types/request": "^2.48.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
