--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
-    "@types/request": "^2.48.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
@@ -73,6 +72,7 @@
     "google-auth-library": "^8.7.0",
     "husky": "^8.0.3",
     "joi": "^17.9.1",
+    "json5": "^2.2.3",
     "knex": "^2.4.2",
     "lint-staged": "^13.2.0",
     "lodash": "^4.17.21",
@@ -96,6 +96,7 @@
     "@types/cron": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/json5": "^2.2.0",
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.192",
     "@types/node": "^16.0.0",
@@ -104,6 +105,7 @@
     "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/request": "^2.48.8",
     "@types/stripe": "^8.0.417",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.1",
