--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
+    "@types/moment": "^2.13.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
@@ -76,6 +77,7 @@
     "knex": "^2.4.2",
     "lint-staged": "^13.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nestjs-knex": "^2.0.0",
     "nestjs-stripe": "^1.0.0",
     "nodemailer": "^6.9.1",
