--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
 
 STRIPE_PUBLISHABLE_KEY=STRIPE_PUBLISHABLE_KEY
 STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
+
+FRONTEND_BASE_URL=http://localhost:3000
