--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
   },
   "exclude": ["node_modules", "**/*.spec.ts"],
   "include": [
-    "./src/global-typings.d.ts",
+    "global-typings.d.ts",
     ".eslintrc.js",
     "src",
     "libs",
