--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
       "ts"
     ],
     "moduleNameMapper": {
-      "^@wirebill/pdf-generator-package(|/.*)$": "<rootDir>/libs/pdf-generator-package/src/$1",
       "^@wirebill/shared-admin(|/.*)$": "<rootDir>/libs/shared-admin/src/$1",
       "^@wirebill/shared-consumer(|/.*)$": "<rootDir>/libs/shared-consumer/src/$1",
       "^@wirebill/shared-common(|/.*)$": "<rootDir>/libs/shared-common/src/$1"
@@ -73,6 +72,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
+    "@wirebill/pdf-generator-package": "^0.0.1",
     "@wirebill/shared-common": "file:.yalc/@wirebill/shared-common",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
