--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     ],
     "moduleNameMapper": {
       "^@wirebill/shared-admin(|/.*)$": "<rootDir>/libs/shared-admin/src/$1",
-      "^@wirebill/shared-consumer(|/.*)$": "<rootDir>/libs/shared-consumer/src/$1",
-      "^@wirebill/shared-common(|/.*)$": "<rootDir>/libs/shared-common/src/$1"
+      "^@wirebill/shared-consumer(|/.*)$": "<rootDir>/libs/shared-consumer/src/$1"
     },
     "rootDir": ".",
     "roots": [
@@ -73,7 +72,7 @@
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
     "@wirebill/pdf-generator-package": "^0.0.1",
-    "@wirebill/shared-common": "file:.yalc/@wirebill/shared-common",
+    "@wirebill/shared-common": "^0.0.920387666-SNAPSHOT",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
