--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ PORT=8080
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 POSTGRES_DB=wirebill
-POSTGRES_USER=root
-POSTGRES_PASSWORD=password
+POSTGRES_USER=wirebill
+POSTGRES_PASSWORD=wirebill
 POSTGRES_DIALECT=postgres
 POSTGRES_LOGGING=false
 
