--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "build": "nest build",
     "db:make-migration": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:make",
     "db:migrate": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
+    "db:migrate:up": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:up",
     "db:migrate:list": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:list",
     "db:rollback": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:rollback",
     "db:seed": "cross-env NODE_ENV=development ./node_modules/.bin/knex seed:run",
+    "db:seed:add_default_admins": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
+    "db:seed:add_dummy_consumers": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
+    "db:seed:add_dummy_payment_requests": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "knex:init": "./node_modules/.bin/knex init -x ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -71,8 +75,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
-    "@wirebill/pdf-generator-package": "^0.0.934064079",
-    "@wirebill/shared-common": "^0.0.934064079",
+    "@wirebill/pdf-generator-package": "^0.0.934923802",
+    "@wirebill/shared-common": "^0.0.934923802",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
