change-password-updates

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-PORT=8080
+NEST_APP_PORT=8080
+NEST_APP_HOST=0.0.0.0
+NEST_APP_EXTERNAL_ORIGIN=http://0.0.0.0:8080
 
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
@@ -30,6 +32,4 @@ NODEMAILER_SMTP_USER_PASS=
 NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
 
 STRIPE_PUBLISHABLE_KEY=STRIPE_PUBLISHABLE_KEY
-STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
-
-FRONTEND_BASE_URL=http://localhost:3000
+STRIPE_SECRET_KEY=STRIPE_SECRET_KEY 
