vecel-updates-ok

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NEST_APP_EXTERNAL_ORIGIN=http://0.0.0.0:8080
 
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
-POSTGRES_DB=wirebill
+POSTGRES_DATABASE=wirebill
 POSTGRES_USER=wirebill
 POSTGRES_PASSWORD=wirebill
 POSTGRES_DIALECT=postgres
