update-models-add-consumer-credit-card-entity-update-wirebill-packages

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "db:make-migration": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:make",
-    "db:migrate": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
-    "db:migrate:up": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:up",
     "db:migrate:list": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:list",
+    "db:migrate": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
     "db:rollback": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:rollback",
+    "db:migrate:up": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:up",
+    "db:down": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:down",
     "db:seed": "cross-env NODE_ENV=development ./node_modules/.bin/knex seed:run",
     "db:seed:add_default_admins": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
     "db:seed:add_dummy_consumers": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
@@ -75,8 +76,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
-    "@wirebill/pdf-generator-package": "^0.0.955674705",
-    "@wirebill/shared-common": "^0.0.955674705",
+    "@wirebill/pdf-generator-package": "^0.0.956209568",
+    "@wirebill/shared-common": "^0.0.956209568",
+    "addresser": "^1.1.20",
+    "addressit": "^1.8.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
