--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "build": "nest build",
     "db:make-migration": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:make",
     "db:migrate:list": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:list",
-    "db:migrate": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
-    "db:rollback": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:rollback",
     "db:migrate:up": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:up",
-    "db:down": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:down",
+    "db:migrate:down": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:down",
+    "db:migrate:rollback": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:rollback",
+    "db:migrate:latest": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
     "db:seed": "cross-env NODE_ENV=development ./node_modules/.bin/knex seed:run",
     "db:seed:add_default_admins": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
     "db:seed:add_dummy_consumers": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
     "db:seed:add_dummy_payment_requests": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
+    "db:seed:add_dummy_contacts": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083343_add_dummy_contacts.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "knex:init": "./node_modules/.bin/knex init -x ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -76,8 +77,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
-    "@wirebill/pdf-generator-package": "^0.0.956209568",
-    "@wirebill/shared-common": "^0.0.956209568",
+    "@wirebill/pdf-generator-package": "^0.0.957354164",
+    "@wirebill/shared-common": "^0.0.957354164",
     "addresser": "^1.1.20",
     "addressit": "^1.8.2",
     "class-transformer": "^0.5.1",
