prepare-to-uploading-files-to-s3

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ JWT_REFRESH_TOKEN_EXPIRES_IN=168h
 
 HTTP_BASIC_USER=wirebill
 HTTP_BASIC_PASS=wirebill
- 
+
 NODEMAILER_SMTP_HOST=
 NODEMAILER_SMTP_PORT=
 NODEMAILER_SMTP_USER=
@@ -32,4 +32,12 @@ NODEMAILER_SMTP_USER_PASS=
 NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
 
 STRIPE_PUBLISHABLE_KEY=STRIPE_PUBLISHABLE_KEY
-STRIPE_SECRET_KEY=STRIPE_SECRET_KEY 
+STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
+
+AWS_FILE_UPLOAD_MAX_SIZE_BYTES= #DEFAULT TO 50MB
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET_NAME=
+AWS_BUCKET=
+AWS_OBJECTS_BASE_URL=
