--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     }
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.391.0",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -117,6 +118,7 @@
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.192",
     "@types/moment": "^2.13.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.12",
