consumer-pay-to-contact-inprogress

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.391.0",
+    "@aws-sdk/lib-storage": "^3.397.0",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -78,10 +79,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
-    "@wirebill/pdf-generator-package": "^0.0.957354164",
-    "@wirebill/shared-common": "^0.0.957354164",
+    "@wirebill/pdf-generator-package": "^0.0.977362946",
+    "@wirebill/shared-common": "^0.0.977362946",
     "addresser": "^1.1.20",
     "addressit": "^1.8.2",
+    "aws-sdk": "^2.1442.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
