--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,5 @@ AWS_FILE_UPLOAD_MAX_SIZE_BYTES= #DEFAULT TO 50MB
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
-AWS_BUCKET_NAME=
-AWS_BUCKET=
+AWS_BUCKET=wirebill
 AWS_OBJECTS_BASE_URL=
