--- a/.env.example
+++ b/.env.example
@@ -10,33 +10,29 @@ POSTGRES_PASSWORD=wirebill
 POSTGRES_DIALECT=postgres
 POSTGRES_LOGGING=false
 
-GOOGLE_API_KEY=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_PROJECT_ID=
-GOOGLE_AUTH_URI=
-GOOGLE_TOKEN_URI=
-GOOGLE_AUTH_PROVIDER_X509_CERT_URL=
+GOOGLE_API_KEY=GOOGLE_API_KEY
+GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
+GOOGLE_PROJECT_ID=GOOGLE_PROJECT_ID
+GOOGLE_AUTH_URI=GOOGLE_AUTH_URI
+GOOGLE_TOKEN_URI=GOOGLE_TOKEN_URI
+GOOGLE_AUTH_PROVIDER_X509_CERT_URL=GOOGLE_AUTH_PROVIDER_X509_CERT_URL
 
 JWT_SECRET=JWT_SECRET
 JWT_ACCESS_TOKEN_EXPIRES_IN=24h
 JWT_REFRESH_TOKEN_EXPIRES_IN=168h
 
-HTTP_BASIC_USER=wirebill
-HTTP_BASIC_PASS=wirebill
-
-NODEMAILER_SMTP_HOST=
-NODEMAILER_SMTP_PORT=
-NODEMAILER_SMTP_USER=
-NODEMAILER_SMTP_USER_PASS=
+NODEMAILER_SMTP_HOST=NODEMAILER_SMTP_HOST
+NODEMAILER_SMTP_PORT=NODEMAILER_SMTP_PORT
+NODEMAILER_SMTP_USER=NODEMAILER_SMTP_USER
+NODEMAILER_SMTP_USER_PASS=NODEMAILER_SMTP_USER_PASS
 NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
 
 STRIPE_PUBLISHABLE_KEY=STRIPE_PUBLISHABLE_KEY
 STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
 
-AWS_FILE_UPLOAD_MAX_SIZE_BYTES= #DEFAULT TO 50MB
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+AWS_FILE_UPLOAD_MAX_SIZE_BYTES=50000000 #DEFAULT TO 50MB
+AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
+AWS_REGION=AWS_REGION
 AWS_BUCKET=wirebill
-AWS_OBJECTS_BASE_URL=
