--- a/docker/docker-compose.development.yml
+++ b/docker/docker-compose.development.yml
@@ -1,32 +1,32 @@
 version: '3.8'
 services:
-  wirebill_postgress:
-    container_name: wirebill_postgress
+  wb_postgres:
+    container_name: wb_postgres
     image: postgres:latest
     env_file:
       - ../.env.$NODE_ENV
     ports:
       - "5432:5432"
     volumes:
-      - wirebill_postgress_data:/data/db
+      - wb_postgres_data:/data/db
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
-      - wirebill_network
+      - wb_network
     restart: unless-stopped
 
-  wirebill_adminer:
-    container_name: wirebill_adminer
+  wb_adminer:
+    container_name: wb_adminer
     image: adminer
     restart: unless-stopped
     ports:
       - "9999:8080"
     networks:
-      - wirebill_network  
+      - wb_network
 
 volumes:
-  wirebill_postgress_data:
+  wb_postgres_data:
+
 
 networks:
-  wirebill_network:
+  wb_network:
     driver: bridge
-
