--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "types": [
+      "@types/node"
+    ],
+    "noEmit": true,
+    "allowJs": true
   },
+  "extends": "./tsconfig.json",
   "include": [
-    "**/src/**/*.ts",
-    "**/libs/**/*.ts",
-    "**/typings/**/*.ts"
+    ".eslintrc.js",
+    "knexfile.ts",
   ]
 }
