changes - moving repositories outside of modules(reason: sharing between admin and consumer modules) - update payment_request entity (model, dto, migration, endpoints) - add transaction entity (model, dto, migration, endpoints)

--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.2.1",
-    "@wirebill/pdf-generator-package": "workspace:*",
-    "@wirebill/shared-common": "workspace:*",
+    "@wirebill/pdf-generator-package": "^0.0.990533416",
+    "@wirebill/shared-common": "^0.0.990533416",
     "addresser": "^1.1.20",
     "addressit": "^1.8.2",
     "aws-sdk": "^2.1442.0",
