--- a/package.json
+++ b/package.json
@@ -139,12 +139,12 @@
     "prettier": "^3.0.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
+    "ts-jest": "28.0.5",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "4.0.0",
     "ttypescript": "^1.5.15",
-    "typescript": "^5.1.6"
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=16.16",
