--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
       "^.+\\.(t|j)s$": "ts-jest"
     }
   },
+  "resolutions": {
+    "jackspeak": "2.1.1"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.405.0",
-    "@aws-sdk/lib-storage": "^3.405.0",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.1",
@@ -81,13 +83,11 @@
     "@nestjs/swagger": "^7.1.10",
     "@wirebill/pdf-generator-package": "^0.0.991334230",
     "@wirebill/shared-common": "^0.0.991334230",
-    "addresser": "^1.1.20",
-    "addressit": "^1.8.2",
-    "aws-sdk": "^2.1450.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
     "google-auth-library": "^9.0.0",
     "husky": "^8.0.3",
     "joi": "^17.10.1",
@@ -114,6 +114,7 @@
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.4",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.4",
     "@types/lodash": "^4.14.197",
     "@types/multer": "^1.4.7",
@@ -139,12 +140,12 @@
     "prettier": "^3.0.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "28.0.5",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "ttypescript": "^1.5.15",
-    "typescript": "^4.3.5"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=16.16",
