--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "name": "@wirebill/backend",
   "version": "0.0.1",
-  "private": true,
   "description": "",
   "license": "UNLICENSED",
   "author": "",
-  "workspaces": {
-    "packages": [
-      "libs/**/*"
-    ]
-  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -52,14 +46,9 @@
       "json",
       "ts"
     ],
-    "moduleNameMapper": {
-      "^@wirebill/shared-admin(|/.*)$": "<rootDir>/libs/shared-admin/src/$1",
-      "^@wirebill/shared-consumer(|/.*)$": "<rootDir>/libs/shared-consumer/src/$1"
-    },
     "rootDir": ".",
     "roots": [
-      "<rootDir>/src/",
-      "<rootDir>/libs/"
+      "<rootDir>/src/"
     ],
     "testEnvironment": "node",
     "testRegex": ".*\\.spec\\.ts$",
@@ -77,7 +66,6 @@
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.1",
-    "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^3.0.3",
     "@nestjs/swagger": "^7.1.10",
@@ -98,9 +86,6 @@
     "nestjs-knex": "^2.0.0",
     "nestjs-stripe": "^1.0.0",
     "nodemailer": "^6.9.4",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "puppeteer": "^21.1.1",
     "reflect-metadata": "^0.1.13",
@@ -120,10 +105,6 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.9",
     "@types/nodemailer": "^6.4.9",
-    "@types/passport": "^1.0.12",
-    "@types/passport-http": "^0.3.9",
-    "@types/passport-jwt": "^3.0.9",
-    "@types/passport-local": "^1.0.35",
     "@types/pg": "^8.10.2",
     "@types/request": "^2.48.8",
     "@types/supertest": "^2.0.12",
