--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ POSTGRES_USER=wirebill
 POSTGRES_PASSWORD=wirebill
 POSTGRES_DIALECT=postgres
 POSTGRES_LOGGING=false
+POSTGRES_SSL=false
 
 GOOGLE_API_KEY=GOOGLE_API_KEY
 GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
