test-apply-vercel-genv

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 NEST_APP_PORT=8080
-NEST_APP_HOST=0.0.0.0
-NEST_APP_EXTERNAL_ORIGIN=http://0.0.0.0:8080
+NEST_APP_HOST=localhost
+NEST_APP_EXTERNAL_ORIGIN=http://localhost:8080
 
-POSTGRES_HOST=0.0.0.0
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=wirebill
 POSTGRES_USER=wirebill
@@ -24,7 +24,7 @@ JWT_ACCESS_TOKEN_EXPIRES_IN=15m
 JWT_REFRESH_TOKEN_EXPIRES_IN=168h
 
 NODEMAILER_SMTP_HOST=NODEMAILER_SMTP_HOST
-NODEMAILER_SMTP_PORT=NODEMAILER_SMTP_PORT
+NODEMAILER_SMTP_PORT=587
 NODEMAILER_SMTP_USER=NODEMAILER_SMTP_USER
 NODEMAILER_SMTP_USER_PASS=NODEMAILER_SMTP_USER_PASS
 NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
