refresh-access-minor-updates

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE=wirebill
 POSTGRES_USER=wirebill
 POSTGRES_PASSWORD=wirebill
-POSTGRES_DIALECT=postgres
-POSTGRES_LOGGING=false
+POSTGRES_DEBUG=false
 POSTGRES_SSL=false
+# VERCEL_POSTGRES_URL=VERCEL_POSTGRES_URL #!!!optional, when provided other options will be ignored
 
 GOOGLE_API_KEY=GOOGLE_API_KEY
 GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
