exchange-rate-to-test

--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^3.0.3",
     "@nestjs/swagger": "^7.1.10",
-    "@wirebill/pdf-generator-package": "file:.yalc/@wirebill/pdf-generator-package",
-    "@wirebill/shared-common": "file:.yalc/@wirebill/shared-common",
+    "@wirebill/pdf-generator-package": "^0.0.1047580033",
+    "@wirebill/shared-common": "^0.0.1047580033",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
