--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "db:seed:add_dummy_contacts": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083343_add_dummy_contacts.ts",
     "db:seed:add_dummy_payment_requests": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
     "db:seed:add_dummy_exchange_rates": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083443_add_dummy_exchange_rates.ts",
+    "db:seed:add_dummy_payment_methods": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083543_add_dummy_payment_methods.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "knex:init": "./node_modules/.bin/knex init -x ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
