--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "db:seed:add_default_admins": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
     "db:seed:add_dummy_consumers": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
     "db:seed:add_dummy_contacts": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083343_add_dummy_contacts.ts",
-    "db:seed:add_dummy_payment_requests": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
     "db:seed:add_dummy_exchange_rates": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083443_add_dummy_exchange_rates.ts",
     "db:seed:add_dummy_payment_methods": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083543_add_dummy_payment_methods.ts",
+    "db:seed:add_dummy_payment_requests": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "knex:init": "./node_modules/.bin/knex init -x ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -28,8 +28,8 @@
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:vercel:dev": "cross-env NODE_ENV=development IS_ON_VERCEL=true nest start --watch",
     "start:prod": "node dist/main",
+    "start:vercel:dev": "cross-env NODE_ENV=development IS_ON_VERCEL=true nest start --watch",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -59,80 +59,78 @@
       "^.+\\.(t|j)s$": "ts-jest"
     }
   },
-  "resolutions": {
-    "jackspeak": "2.1.1"
-  },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.405.0",
-    "@nestjs-modules/mailer": "^1.9.1",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^3.0.1",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.1.1",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/schedule": "^3.0.3",
-    "@nestjs/swagger": "^7.1.10",
-    "@wirebill/pdf-generator-package": "^0.0.1051848982",
-    "@wirebill/shared-common": "^0.0.1051848982",
+    "@aws-sdk/client-s3": "^3.567.0",
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
+    "@nestjs/swagger": "^7.3.1",
+    "@wirebill/pdf-generator-package": "^0.0.1276147011",
+    "@wirebill/shared-common": "^0.0.1276147011",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
-    "express-session": "^1.17.3",
-    "google-auth-library": "^9.0.0",
-    "husky": "^8.0.3",
-    "joi": "^17.10.1",
-    "knex": "^2.5.1",
-    "lint-staged": "^14.0.1",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
+    "express-session": "^1.18.0",
+    "google-auth-library": "^9.9.0",
+    "husky": "^9.0.11",
+    "joi": "^17.13.1",
+    "knex": "^3.1.0",
+    "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "nestjs-knex": "^2.0.0",
     "nestjs-stripe": "^1.0.0",
-    "nodemailer": "^6.9.4",
-    "pg": "^8.11.3",
-    "puppeteer": "^21.1.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.1",
-    "rxjs": "^7.2.0",
-    "stripe": "^13.4.0",
-    "uuid": "^9.0.0"
+    "nodemailer": "^6.9.13",
+    "pg": "^8.11.5",
+    "puppeteer": "^22.7.1",
+    "reflect-metadata": "^0.2.0",
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
+    "stripe": "^15.4.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.17",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.4",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
-    "@types/jest": "^29.5.4",
-    "@types/lodash": "^4.14.197",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^20.5.9",
-    "@types/nodemailer": "^6.4.9",
-    "@types/pg": "^8.10.2",
-    "@types/request": "^2.48.8",
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "eslint": "^8.48.0",
+    "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.17.0",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.11.5",
+    "@types/request": "^2.48.12",
+    "@types/supertest": "^6.0.0",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "jest": "^29.6.4",
-    "prettier": "^3.0.3",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "ttypescript": "^1.5.15",
-    "typescript": "^5.1.6"
+    "typescript": "5.3.3"
   },
   "engines": {
-    "node": ">=18.16.0",
-    "npm": ">=9.5.1"
+    "node": ">=20.11.1",
+    "npm": ">=10.2.4"
   }
 }
