--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "db:seed:add_dummy_exchange_rates": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083443_add_dummy_exchange_rates.ts",
     "db:seed:add_dummy_payment_methods": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083543_add_dummy_payment_methods.ts",
     "db:seed:add_dummy_payment_requests": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
+    "format": "prettier --write \"./{apps,libs,src}/**/*.{ts,js}\" ",
     "knex:init": "./node_modules/.bin/knex init -x ts",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "dotenv -v NODE_OPTIONS=--max-old-space-size=4096 -v DEBUG=eslint:cli-engine eslint \"./{apps,libs,src}/**/*.{ts,js}\" --fix",
     "precommit": "lint-staged",
     "prepare": "husky install",
     "start": "nest start",
@@ -34,10 +34,14 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "type-check": "tsc --noEmit"
   },
   "lint-staged": {
-    "**/*.{ts,json}": []
+    "**/*.{ts}": [
+      "yarn format",
+      "yarn lint"
+    ]
   },
   "jest": {
     "collectCoverageFrom": [
@@ -93,7 +97,8 @@
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
     "stripe": "^15.4.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
