--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "format": "prettier --write \"./{apps,libs,src}/**/*.{ts,js}\" ",
     "knex:init": "./node_modules/.bin/knex init -x ts",
     "lint": "dotenv -v NODE_OPTIONS=--max-old-space-size=4096 -v DEBUG=eslint:cli-engine eslint \"./{apps,libs,src}/**/*.{ts,js}\" --fix",
-    "precommit": "lint-staged",
     "prepare": "husky install",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
@@ -35,7 +34,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:watch": "jest --watch",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "**/*.{ts}": [
