access+refresh-exp

--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,39 @@
-NEST_APP_PORT=8080
-NEST_APP_HOST=localhost
-NEST_APP_EXTERNAL_ORIGIN=http://localhost:8080
+NEST_APP_PORT="8080"
+NEST_APP_HOST="localhost"
+NEST_APP_EXTERNAL_ORIGIN="http://localhost:8080"
 
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DATABASE=wirebill
-POSTGRES_USER=wirebill
-POSTGRES_PASSWORD=wirebill
-POSTGRES_DEBUG=false
-POSTGRES_SSL=false
+POSTGRES_HOST="localhost"
+POSTGRES_PORT="5432"
+POSTGRES_DATABASE="wirebill"
+POSTGRES_USER="wirebill"
+POSTGRES_PASSWORD="wirebill"
+POSTGRES_DEBUG="false"
+POSTGRES_SSL="false"
 # VERCEL_POSTGRES_URL=VERCEL_POSTGRES_URL #!!!optional, when provided other options will be ignored
 
-GOOGLE_API_KEY=GOOGLE_API_KEY
-GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
-GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
-GOOGLE_PROJECT_ID=GOOGLE_PROJECT_ID
-GOOGLE_AUTH_URI=GOOGLE_AUTH_URI
-GOOGLE_TOKEN_URI=GOOGLE_TOKEN_URI
-GOOGLE_AUTH_PROVIDER_X509_CERT_URL=GOOGLE_AUTH_PROVIDER_X509_CERT_URL
+GOOGLE_API_KEY="GOOGLE_API_KEY"
+GOOGLE_CLIENT_ID="GOOGLE_CLIENT_ID"
+GOOGLE_CLIENT_SECRET="GOOGLE_CLIENT_SECRET"
+GOOGLE_PROJECT_ID="GOOGLE_PROJECT_ID"
+GOOGLE_AUTH_URI="GOOGLE_AUTH_URI"
+GOOGLE_TOKEN_URI="GOOGLE_TOKEN_URI"
+GOOGLE_AUTH_PROVIDER_X509_CERT_URL="GOOGLE_AUTH_PROVIDER_X509_CERT_URL"
 
-JWT_SECRET=JWT_SECRET
-JWT_ACCESS_TOKEN_EXPIRES_IN=15m
-JWT_REFRESH_TOKEN_EXPIRES_IN=168h
+JWT_SECRET="JWT_SECRET"
+JWT_ACCESS_TOKEN_EXPIRES_IN="640000000"   #24h
+JWT_REFRESH_TOKEN_EXPIRES_IN="4800000000" #168h
 
-NODEMAILER_SMTP_HOST=NODEMAILER_SMTP_HOST
-NODEMAILER_SMTP_PORT=587
-NODEMAILER_SMTP_USER=NODEMAILER_SMTP_USER
-NODEMAILER_SMTP_USER_PASS=NODEMAILER_SMTP_USER_PASS
-NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
+NODEMAILER_SMTP_HOST="NODEMAILER_SMTP_HOST"
+NODEMAILER_SMTP_PORT="587"
+NODEMAILER_SMTP_USER="NODEMAILER_SMTP_USER"
+NODEMAILER_SMTP_USER_PASS="NODEMAILER_SMTP_USER_PASS"
+NODEMAILER_SMTP_DEFAULT_FROM="noreply@wirebill.com"
 
-STRIPE_PUBLISHABLE_KEY=STRIPE_PUBLISHABLE_KEY
-STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
+STRIPE_PUBLISHABLE_KEY="STRIPE_PUBLISHABLE_KEY"
+STRIPE_SECRET_KEY="STRIPE_SECRET_KEY"
 
-AWS_FILE_UPLOAD_MAX_SIZE_BYTES=50000000 #DEFAULT TO 50MB
-AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
-AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
-AWS_REGION=AWS_REGION
-AWS_BUCKET=wirebill
+AWS_FILE_UPLOAD_MAX_SIZE_BYTES="50000000" #DEFAULT TO 50MB
+AWS_ACCESS_KEY_ID="AWS_ACCESS_KEY_ID"
+AWS_SECRET_ACCESS_KEY="AWS_SECRET_ACCESS_KEY"
+AWS_REGION="AWS_REGION"
+AWS_BUCKET="wirebill"
