--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "dotenv-cli": "^7.4.1",
     "express-session": "^1.18.0",
     "google-auth-library": "^9.9.0",
+    "googleapis": "^137.1.0",
     "husky": "^9.0.11",
     "joi": "^17.13.1",
     "knex": "^3.1.0",
