--- a/package.json
+++ b/package.json
@@ -7,35 +7,36 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "db:make-migration": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:make",
-    "db:migrate:down": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:down",
-    "db:migrate:latest": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:latest",
-    "db:migrate:list": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:list",
-    "db:migrate:rollback": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:rollback",
-    "db:migrate:up": "cross-env NODE_ENV=development ./node_modules/.bin/knex migrate:up",
-    "db:seed": "cross-env NODE_ENV=development ./node_modules/.bin/knex seed:run",
-    "db:seed:add_default_admins": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
-    "db:seed:add_dummy_consumers": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
-    "db:seed:add_dummy_contacts": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083343_add_dummy_contacts.ts",
-    "db:seed:add_dummy_exchange_rates": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083443_add_dummy_exchange_rates.ts",
-    "db:seed:add_dummy_payment_methods": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083543_add_dummy_payment_methods.ts",
-    "db:seed:add_dummy_payment_requests": "cross-env NODE_ENV=development ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
+    "db:make-migration": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:make",
+    "db:migrate:down": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:down",
+    "db:migrate:latest": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:latest",
+    "db:migrate:list": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:list",
+    "db:migrate:rollback": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:rollback",
+    "db:migrate:up": "dotenv -e ./.env.development -- ./node_modules/.bin/knex migrate:up",
+    "db:seed": "dotenv -e ./.env.development -- ./node_modules/.bin/knex seed:run",
+    "db:seed:add_default_admins": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083231_add_default_admins.ts",
+    "db:seed:add_dummy_consumers": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083233_add_dummy_consumers.ts",
+    "db:seed:add_dummy_contacts": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083343_add_dummy_contacts.ts",
+    "db:seed:add_dummy_exchange_rates": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083443_add_dummy_exchange_rates.ts",
+    "db:seed:add_dummy_payment_methods": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083543_add_dummy_payment_methods.ts",
+    "db:seed:add_dummy_payment_requests": "dotenv -e ./.env.development -- ./node_modules/.bin/knex  seed:run --specific=20230329083243_add_dummy_payment_requests.ts",
     "format": "prettier --write \"./{apps,libs,src}/**/*.{ts,js}\" ",
     "knex:init": "./node_modules/.bin/knex init -x ts",
     "lint": "dotenv -v NODE_OPTIONS=--max-old-space-size=4096 -v DEBUG=eslint:cli-engine eslint \"./{apps,libs,src}/**/*.{ts,js}\" --fix",
     "prepare": "husky install",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "dotenv -e ./.env.development -- nest start --watch",
     "start:prod": "node dist/main",
     "start:vercel:dev": "cross-env NODE_ENV=development IS_ON_VERCEL=true nest start --watch",
-    "test": "jest",
-    "test:cov": "jest --coverage",
+    "test": "dotenv -e ./.env.development -- jest",
+    "test:cov": "dotenv -e ./.env.development -- jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:watch": "jest --watch",
+    "test:e2e": "dotenv -e ./.env.development -- jest --config ./test/jest-e2e.json",
+    "test:watch": "dotenv -e ./.env.development -- jest --watch",
+    "pre-commit": "npx lint-staged",
     "type-check": "tsc --noEmit",
-    "pre-commit": "npx lint-staged"
+    "pre-push": "yarn type-check && yarn test && yarn test:e2e"
   },
   "lint-staged": {
     "**/*.{ts}": [
@@ -57,10 +58,31 @@
     "roots": [
       "<rootDir>/src/"
     ],
+    "slowTestThreshold": 20,
+    "bail": 1,
+    "logHeapUsage": true,
+    "passWithNoTests": true,
+    "detectOpenHandles": true,
     "testEnvironment": "node",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*\\.test\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "moduleNameMapper": {
+      "^@-/admin(|/.*)$": "<rootDir>/src/admin/$1",
+      "^@-/common(|/.*)$": "<rootDir>/src/common/$1",
+      "^@-/common-shared-modules(|/.*)$": "<rootDir>/src/common-shared-modules/$1",
+      "^@-/common-utils(|/.*)$": "<rootDir>/src/common-utils/$1",
+      "^@-/constants(|/.*)$": "<rootDir>/src/constants/$1",
+      "^@-/consumer(|/.*)$": "<rootDir>/src/consumer/$1",
+      "^@-/database(|/.*)$": "<rootDir>/src/database/$1",
+      "^@-/decorators(|/.*)$": "<rootDir>/src/decorators/$1",
+      "^@-/dtos(|/.*)$": "<rootDir>/src/dtos/$1",
+      "^@-/filters(|/.*)$": "<rootDir>/src/filters/$1",
+      "^@-/guards(|/.*)$": "<rootDir>/src/guards/$1",
+      "^@-/interceptors(|/.*)$": "<rootDir>/src/interceptors/$1",
+      "^@-/middleware(|/.*)$": "<rootDir>/src/middleware/$1",
+      "^@-/repositories(|/.*)$": "<rootDir>/src/repositories/$1"
     }
   },
   "dependencies": {
