Refactor: replace `@nestjs/config` with custom Zod-based environment validation
- Remove `@nestjs/config` module and related imports
- Define Zod schemas for environment variables
- Implement a Zod-based config loader for parsing and validation
- Update application bootstrap to use the new Zod loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "experimentalDecorators": true,
     "noFallthroughCasesInSwitch": false,
     "strict": true,
+    "noStrictGenericChecks": false,
     "baseUrl": "./",
     "paths": {
       "@-/admin": ["src/admin"],
