--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NEST_APP_PORT="8080"
-NEST_APP_HOST="localhost"
-NEST_APP_EXTERNAL_ORIGIN="http://localhost:8080"
+NEST_APP_PORT="8888"
+NEST_APP_HOST="127.0.0.1"
+NEST_APP_EXTERNAL_ORIGIN="http://${NEST_APP_HOST}:${NEST_APP_PORT}"
 
-POSTGRES_HOST="localhost"
+POSTGRES_HOST="127.0.0.1"
 POSTGRES_PORT="5432"
 POSTGRES_DATABASE="wirebill"
 POSTGRES_USER="wirebill"
