--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "sqltools.connections": [
     {
       "previewLimit": 50,
-      "server": "localhost",
+      "server": "127.0.0.1",
       "port": 5432,
       "driver": "PostgreSQL",
       "name": "wirebill",
