Remove TypeScript path aliases and replace with relative imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,4 +39,8 @@
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
   "typescript.tsdk": "node_modules/typescript/lib",
   "task.allowAutomaticTasks": "off",
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "javascript.preferences.importModuleSpecifier": "relative",
+  "typescript.preferences.importModuleSpecifierEnding": "auto",
+  "javascript.preferences.importModuleSpecifierEnding": "auto"
 }
