--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/api",
+  "name": "@remoola/api-types",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
@@ -31,8 +31,8 @@
     "@nestjs/mapped-types": "*"
   },
   "devDependencies": {
-    "@repo/eslint-config": "^0.0.0",
-    "@repo/typescript-config": "^0.0.0",
+    "@remoola/eslint-config": "^0.0.0",
+    "@remoola/typescript-config": "^0.0.0",
     "@types/node": "^22.10.7",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
