--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/jest-config",
+  "name": "@remoola/jest-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
