--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -24,7 +24,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.3.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.8.2",
+    "typescript": "5.8.2",
     "typescript-eslint": "^8.37.0"
   },
   "scripts": {
