--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -34,7 +34,7 @@
     "@jest/types": "^29.6.3",
     "jest": "^29.7.0",
     "next": "^15.4.2",
-    "typescript": "^5.8.2"
+    "typescript": "5.8.2"
   },
   "scripts": {
     "build": "tsc",
