--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,5 +10,6 @@
     "mtxr.sqltools",
     "mtxr.sqltools-driver-pg",
     "eliostruyf.vscode-typescript-exportallmodules",
+    "prisma.prisma",
   ]
 }
